src/main/java/ar/edu/unq/parser/antlr4/FlechaParser.java
// Generated from /home/sb2/www/parseo/FlechaParser/src/main/antlr4/Flecha.g4 by ANTLR 4.7
package ar.edu.unq.parser.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FlechaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, CONS=2, IF=3, THEN=4, ELIF=5, ELSE=6, CASE=7, LET=8, IN=9, DEFEQ=10, 
		SEMICOLON=11, LBRACKET=12, RBRACKET=13, BACKSLASH=14, PIPE=15, ARROW=16, 
		SINGLEQUOTE=17, QUOTE=18, AND=19, OR=20, NEGATION=21, EQ=22, NE=23, GE=24, 
		LE=25, GT=26, LT=27, PLUS=28, MINUS=29, TIMES=30, DIV=31, MOD=32, WHITESPACE=33, 
		NEWLINE=34, COMMENT=35, NUMBER=36, ID=37, LOWERID=38, UPPERID=39, LITERAL=40, 
		CHARS=41, CHAR=42, LAMBDA=43, STRING=44;
	public static final int
		RULE_program = 0, RULE_program1 = 1, RULE_definition = 2, RULE_expression = 3, 
		RULE_externalExpression = 4, RULE_ifExpression = 5, RULE_elseBranch = 6, 
		RULE_caseExpression = 7, RULE_caseBranches = 8, RULE_caseBranch = 9, RULE_letExpression = 10, 
		RULE_lambdaExpression = 11, RULE_internalExpression = 12, RULE_internalExpression2 = 13, 
		RULE_binaryOperator = 14, RULE_unaryOperator = 15, RULE_applicationExpresion = 16, 
		RULE_listExpression = 17, RULE_atomicExpression = 18, RULE_parameters = 19;
	public static final String[] ruleNames = {
		"program", "program1", "definition", "expression", "externalExpression", 
		"ifExpression", "elseBranch", "caseExpression", "caseBranches", "caseBranch", 
		"letExpression", "lambdaExpression", "internalExpression", "internalExpression2", 
		"binaryOperator", "unaryOperator", "applicationExpresion", "listExpression", 
		"atomicExpression", "parameters"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'def'", "'Cons'", "'if'", "'then'", "'elif'", "'else'", "'case'", 
		"'let'", "'in'", "'='", "';'", "'('", "')'", "'\\'", "'|'", "'->'", "'''", 
		"'\"'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'>='", "'<='", "'>'", 
		"'<'", "'+'", "'-'", "'*'", "'/'", "'%'", "' '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DEF", "CONS", "IF", "THEN", "ELIF", "ELSE", "CASE", "LET", "IN", 
		"DEFEQ", "SEMICOLON", "LBRACKET", "RBRACKET", "BACKSLASH", "PIPE", "ARROW", 
		"SINGLEQUOTE", "QUOTE", "AND", "OR", "NEGATION", "EQ", "NE", "GE", "LE", 
		"GT", "LT", "PLUS", "MINUS", "TIMES", "DIV", "MOD", "WHITESPACE", "NEWLINE", 
		"COMMENT", "NUMBER", "ID", "LOWERID", "UPPERID", "LITERAL", "CHARS", "CHAR", 
		"LAMBDA", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Flecha.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlechaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program1Context program1() {
			return getRuleContext(Program1Context.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			program1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program1Context extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public Program1Context program1() {
			return getRuleContext(Program1Context.class,0);
		}
		public Program1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterProgram1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitProgram1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitProgram1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Program1Context program1() throws RecognitionException {
		Program1Context _localctx = new Program1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_program1);
		try {
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				definition();
				setState(43);
				program1();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(FlechaParser.DEF, 0); }
		public TerminalNode LOWERID() { return getToken(FlechaParser.LOWERID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode DEFEQ() { return getToken(FlechaParser.DEFEQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(DEF);
			setState(49);
			match(LOWERID);
			setState(50);
			parameters();
			setState(51);
			match(DEFEQ);
			setState(52);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExternalExpressionContext externalExpression() {
			return getRuleContext(ExternalExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(FlechaParser.SEMICOLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression);
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				externalExpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				externalExpression();
				setState(56);
				match(SEMICOLON);
				setState(57);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExternalExpressionContext extends ParserRuleContext {
		public IfExpressionContext ifExpression() {
			return getRuleContext(IfExpressionContext.class,0);
		}
		public CaseExpressionContext caseExpression() {
			return getRuleContext(CaseExpressionContext.class,0);
		}
		public LetExpressionContext letExpression() {
			return getRuleContext(LetExpressionContext.class,0);
		}
		public InternalExpressionContext internalExpression() {
			return getRuleContext(InternalExpressionContext.class,0);
		}
		public LambdaExpressionContext lambdaExpression() {
			return getRuleContext(LambdaExpressionContext.class,0);
		}
		public ExternalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_externalExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterExternalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitExternalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitExternalExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExternalExpressionContext externalExpression() throws RecognitionException {
		ExternalExpressionContext _localctx = new ExternalExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_externalExpression);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				ifExpression();
				}
				break;
			case CASE:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				caseExpression();
				}
				break;
			case LET:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				letExpression();
				}
				break;
			case CONS:
			case LBRACKET:
			case NEGATION:
			case MINUS:
			case NUMBER:
			case LOWERID:
			case UPPERID:
			case LITERAL:
			case CHAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				internalExpression();
				}
				break;
			case LAMBDA:
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				lambdaExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfExpressionContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(FlechaParser.IF, 0); }
		public List<InternalExpressionContext> internalExpression() {
			return getRuleContexts(InternalExpressionContext.class);
		}
		public InternalExpressionContext internalExpression(int i) {
			return getRuleContext(InternalExpressionContext.class,i);
		}
		public TerminalNode THEN() { return getToken(FlechaParser.THEN, 0); }
		public ElseBranchContext elseBranch() {
			return getRuleContext(ElseBranchContext.class,0);
		}
		public IfExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterIfExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitIfExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitIfExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfExpressionContext ifExpression() throws RecognitionException {
		IfExpressionContext _localctx = new IfExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(IF);
			setState(69);
			internalExpression();
			setState(70);
			match(THEN);
			setState(71);
			internalExpression();
			setState(72);
			elseBranch();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseBranchContext extends ParserRuleContext {
		public TerminalNode ELIF() { return getToken(FlechaParser.ELIF, 0); }
		public List<InternalExpressionContext> internalExpression() {
			return getRuleContexts(InternalExpressionContext.class);
		}
		public InternalExpressionContext internalExpression(int i) {
			return getRuleContext(InternalExpressionContext.class,i);
		}
		public TerminalNode THEN() { return getToken(FlechaParser.THEN, 0); }
		public ElseBranchContext elseBranch() {
			return getRuleContext(ElseBranchContext.class,0);
		}
		public ElseBranchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseBranch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterElseBranch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitElseBranch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitElseBranch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseBranchContext elseBranch() throws RecognitionException {
		ElseBranchContext _localctx = new ElseBranchContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_elseBranch);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(ELIF);
			setState(75);
			internalExpression();
			setState(76);
			match(THEN);
			setState(77);
			internalExpression();
			setState(78);
			elseBranch();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseExpressionContext extends ParserRuleContext {
		public TerminalNode CASE() { return getToken(FlechaParser.CASE, 0); }
		public InternalExpressionContext internalExpression() {
			return getRuleContext(InternalExpressionContext.class,0);
		}
		public CaseBranchesContext caseBranches() {
			return getRuleContext(CaseBranchesContext.class,0);
		}
		public CaseExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterCaseExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitCaseExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitCaseExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaseExpressionContext caseExpression() throws RecognitionException {
		CaseExpressionContext _localctx = new CaseExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_caseExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(CASE);
			setState(81);
			internalExpression();
			setState(82);
			caseBranches();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseBranchesContext extends ParserRuleContext {
		public List<CaseBranchContext> caseBranch() {
			return getRuleContexts(CaseBranchContext.class);
		}
		public CaseBranchContext caseBranch(int i) {
			return getRuleContext(CaseBranchContext.class,i);
		}
		public CaseBranchesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseBranches; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterCaseBranches(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitCaseBranches(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitCaseBranches(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaseBranchesContext caseBranches() throws RecognitionException {
		CaseBranchesContext _localctx = new CaseBranchesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_caseBranches);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				caseBranch();
				setState(85);
				caseBranch();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseBranchContext extends ParserRuleContext {
		public TerminalNode PIPE() { return getToken(FlechaParser.PIPE, 0); }
		public TerminalNode UPPERID() { return getToken(FlechaParser.UPPERID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(FlechaParser.ARROW, 0); }
		public InternalExpressionContext internalExpression() {
			return getRuleContext(InternalExpressionContext.class,0);
		}
		public CaseBranchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseBranch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterCaseBranch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitCaseBranch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitCaseBranch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaseBranchContext caseBranch() throws RecognitionException {
		CaseBranchContext _localctx = new CaseBranchContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_caseBranch);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(PIPE);
			setState(91);
			match(UPPERID);
			setState(92);
			parameters();
			setState(93);
			match(ARROW);
			setState(94);
			internalExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetExpressionContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(FlechaParser.LET, 0); }
		public TerminalNode ID() { return getToken(FlechaParser.ID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode DEFEQ() { return getToken(FlechaParser.DEFEQ, 0); }
		public InternalExpressionContext internalExpression() {
			return getRuleContext(InternalExpressionContext.class,0);
		}
		public TerminalNode IN() { return getToken(FlechaParser.IN, 0); }
		public ExternalExpressionContext externalExpression() {
			return getRuleContext(ExternalExpressionContext.class,0);
		}
		public LetExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterLetExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitLetExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitLetExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetExpressionContext letExpression() throws RecognitionException {
		LetExpressionContext _localctx = new LetExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_letExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(LET);
			setState(97);
			match(ID);
			setState(98);
			parameters();
			setState(99);
			match(DEFEQ);
			setState(100);
			internalExpression();
			setState(101);
			match(IN);
			setState(102);
			externalExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LambdaExpressionContext extends ParserRuleContext {
		public TerminalNode LAMBDA() { return getToken(FlechaParser.LAMBDA, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(FlechaParser.ARROW, 0); }
		public ExternalExpressionContext externalExpression() {
			return getRuleContext(ExternalExpressionContext.class,0);
		}
		public LambdaExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambdaExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterLambdaExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitLambdaExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitLambdaExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LambdaExpressionContext lambdaExpression() throws RecognitionException {
		LambdaExpressionContext _localctx = new LambdaExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_lambdaExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(LAMBDA);
			setState(105);
			parameters();
			setState(106);
			match(ARROW);
			setState(107);
			externalExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InternalExpressionContext extends ParserRuleContext {
		public ApplicationExpresionContext applicationExpresion() {
			return getRuleContext(ApplicationExpresionContext.class,0);
		}
		public InternalExpression2Context internalExpression2() {
			return getRuleContext(InternalExpression2Context.class,0);
		}
		public UnaryOperatorContext unaryOperator() {
			return getRuleContext(UnaryOperatorContext.class,0);
		}
		public InternalExpressionContext internalExpression() {
			return getRuleContext(InternalExpressionContext.class,0);
		}
		public InternalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_internalExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).enterInternalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlechaListener ) ((FlechaListener)listener).exitInternalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlechaVisitor ) return ((FlechaVisitor<? extends T>)visitor).visitInternalExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InternalExpressionContext internalExpression() throws RecognitionException {
		InternalExpressionContext _localctx = new InternalExpressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_internalExpression);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONS:
			case LBRACKET:
			case NUMBER:
			case LOWERID:
			case UPPERID:
			case LITERAL:
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				applicationExpresion(0);
				setState(110);
				internalExpression2();
				}
				break;
			case NEGATION:
			case MINUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				unaryOperator();
				setState(113);
				internalExpression();
				setState(114);
				internalExpression2();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
